--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -259,6 +259,7 @@ ko:
             finance: 회계관리
             project: 프로젝트
             document: 문서관리
+            business_client: 거래처관리
     namecards:
         edit:
             title: 명함 정보 수정
@@ -284,6 +285,7 @@ ko:
             title: 소액현금 내역
     business_clients:
         index:
+            title: 거래처 관리
             empty: 거래처가 없습니다.
         new:
             title: 새로운 거래처 입력
