--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -38,7 +38,7 @@ ko:
           delimiter: ","
           # Number of decimals, behind the separator (the number 1 with a precision of 2 gives: 1.00)
           precision: 3
-          
+
         # Used in number_to_currency()
         currency:
             format:
@@ -49,7 +49,10 @@ ko:
                 separator: "."
                 delimiter: ","
                 precision: 0
-
+    helpers:
+        submit:
+            create: "%{model} 만들기"
+            update: "%{model} 수정하기"
     activerecord:
         models:
             attachment: 첨부파일
@@ -61,7 +64,7 @@ ko:
             project: 프로젝트
             hrinfo: 인사정보
             required_tag: 필수 태그 항목
-            business_clients: 거래처
+            business_client: 거래처
             taxman: 담당자
         attributes:
             attachment:
@@ -287,6 +290,8 @@ ko:
         index:
             title: 거래처 관리
             empty: 거래처가 없습니다.
+        show:
+            title: 거래처 내역
         new:
             title: 새로운 거래처 입력
         edit:
