--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -296,6 +296,7 @@ ko:
             title: 새로운 거래처 입력
         edit:
             title: 거래처 수정
+            picture: 사업자등록증
     taxmen:
         empty: 담당자가 없습니다.
         new:
