--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -310,7 +310,7 @@ ko:
             title: 새로운 담당자 입력
         edit:
             title: 담당자 수정
-    taxbill:
+    taxbills:
         index:
             title: 세금계산서 관리
             empty: 세금계산서가 없습니다.
