--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -145,7 +145,7 @@ ko:
                 condition: 업태
                 address: 주소
                 owner: 대표자
-            taxman: 
+            taxman:
                 fullname: 이름
                 email: 이메일
                 phonenumber: 전화번호
@@ -153,6 +153,13 @@ ko:
                 billtype: 타입
                 transacted_at: 거래날짜
                 taxman_id: 담당자
+            taxbill_item:
+              unitprice: 단가
+              quantity: 수량
+              price: 금액
+              tax: 세액
+              note: 내역
+
         errors:
             template:
                 header: 오류가 발생했습니다.
@@ -171,7 +178,7 @@ ko:
             new: 새로운 첨부 올리기
             title: 첨부파일
             uploadedby: 업로더
-        show:  
+        show:
             title: 첨부 상세 내역
         edit:
             title: 첨부 내역 수정
@@ -179,12 +186,12 @@ ko:
             update: 첨부파일 내용이 성공적으로 업데이트 되었습니다.
         new:
             title: 첨부파일 신규 작성
-    cardbills:  
+    cardbills:
         new:
             title: 새로운 카드 영수증 입력
         show:
             title:  "카드 영수증 내역"
-        edit:  
+        edit:
             title: "카드 영수증 내용 수정"
         index:
             title: "카드 영수증 목록"
@@ -206,7 +213,7 @@ ko:
             change: 변경하기
             add: 추가하기
         messages:
-            created: "%{model}이(가) 성공적으로 생성되었습니다." 
+            created: "%{model}이(가) 성공적으로 생성되었습니다."
             not_allowed: 접근할 수 없습니다.
             delete_confirm: 확실히 삭제하겠습니까?
             confirm: 확실히 수행하겠습니까?
@@ -229,7 +236,7 @@ ko:
         link:
             logout: "로그아웃"
     documents:
-        index: 
+        index:
             title: "문서 관리"
         show:
             title: "문서 상세 정보"
@@ -291,7 +298,7 @@ ko:
             title: 소액현금 거래내용 수정
         new:
             title: 새로운 소액 거래 작성
-        show:   
+        show:
             title: 소액현금 내역
     business_clients:
         index:
