--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -446,5 +446,8 @@ ko:
             title: 출퇴근 관리
         new:
             link: 출근 기록 생성
+            picture: 첨부 사진
+        edit:
+            picture: 첨부 사진
         show:
             title: 출퇴근 내역
