--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -350,11 +350,15 @@ ko:
             link: 출근기록 생성
             picture: 첨부 사진
             submit: 출근기록 생성
+        leave:
+            link: 퇴근기록 생성
         edit:
             picture: 첨부 사진
             submit: 퇴근기록 생성
         show:
             title: 출퇴근 내역
+        detail:
+            link: 상세정보
     creditcards:
         index:
             title: 신용카드 목록
