--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -350,8 +350,6 @@ ko:
             link: 출근기록 생성
             picture: 첨부 사진
             submit: 출근기록 생성
-        leave:
-            link: 퇴근기록 생성
         edit:
             picture: 첨부 사진
             submit: 퇴근기록 생성
@@ -360,6 +358,11 @@ ko:
             empty: 출근 기록이 없습니다
         detail:
             link: 상세정보
+        go:
+            title: 출근기록 생성하기
+        leave:
+            link: 퇴근기록 생성
+            title: 최근기록 생성하기
     creditcards:
         index:
             title: 신용카드 목록
