--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -505,11 +505,13 @@ ko:
         edit:
             title: 담당자 수정
     vacations:
-        show:
+        index:
             title: 연차 정보
-            link: 연차 관리
             info: "할당 연차: %{total}일, 사용 연차: %{used}일, 잔여 연차: %{remain}일"
+            link: 연차 관리
             empty: 연차 내역이 없습니다
+        show:
+            link: 연차 관리
         new:
             title: 새로운 연차 할당하기
             link: 연차 할당
