--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -344,25 +344,30 @@ ko:
             destroy: "삭제"
         menu: 메뉴
     commutes:
+        title: 출퇴근 기록 관리
+        arrive_at_work: 출근
+        leave_work: 퇴근
         index:
             title: 출퇴근 관리
         new:
+            title: 출근기록 생성
             link: 출근기록 생성
             picture: 첨부 사진
             submit: 출근기록 생성
         edit:
+            title: 퇴근기록 생성
             picture: 첨부 사진
             submit: 퇴근기록 생성
         show:
-            title: 출퇴근 내역
+            title: 출퇴근 기록 목록
             empty: 출근 기록이 없습니다
         detail:
-            link: 상세정보
+            title: 상세정보
         go:
-            title: 출근기록 생성하기
+            title: 출퇴근 기록 관리
         leave:
             link: 퇴근기록 생성
-            title: 최근기록 생성하기
+            title: 출퇴근 기록 관리
     creditcards:
         index:
             title: 신용카드 목록
