--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -556,10 +556,12 @@ ko:
             empty: 입출금 내역이 없습니다
         excel:
             title: 엑셀로 올리기
+            link: 엑셀 파일로 올리기
             file: 엑셀 파일
             submit: 엑셀 파일 올리기
         new:
             title: 입출금 내역 올리기
+            link: 입출금 내역 올리기
         edit:
             title: 입출금 내역 수정하기
     used_vacations:
