--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -519,6 +519,8 @@ ko:
     taxbill_items:
         new:
             title: 새로운 내역 추가
+        edit:
+            title: 세금계산서 내역 수정
     taxmen:
         empty: 담당자가 없습니다.
         new:
