bind transaction-transfer

--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -575,6 +575,8 @@ ko:
         index:
             title: 입출금 내역
             empty: 입출금 내역이 없습니다
+        show:
+            to_bank_transfer: 이체 내역
         excel:
             title: 엑셀로 올리기
             link: 엑셀 파일로 올리기
