--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -599,6 +599,8 @@ ko:
         new:
             title: 이체 내역 올리기
             link: 이체 내역 올리기
+        show:
+            to_bank_transaction: 입출금 내역
         edit:
             title: 이체 내역 수정하기
 
