--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -605,6 +605,7 @@ ko:
             title: 입출금 내역
             empty: 입출금 내역이 없습니다
         show:
+            title: 입출금 내역
             to_bank_transfer: 이체 내역
         excel:
             title: 엑셀로 올리기
@@ -629,6 +630,7 @@ ko:
             title: 이체 내역 올리기
             link: 이체 내역 올리기
         show:
+            title: 이체 내역
             to_bank_transaction: 입출금 내역
         edit:
             title: 이체 내역 수정하기
