--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -623,6 +623,7 @@ ko:
         excel:
             title: 엑셀로 올리기
             link: 엑셀 파일로 올리기
+            type: 은행명
             file: 엑셀 파일
             submit: 엑셀 파일 올리기
         new:
@@ -637,6 +638,7 @@ ko:
         excel:
             title: 엑셀로 올리기
             link: 엑셀 파일로 올리기
+            type: 은행명
             file: 엑셀 파일
             submit: 엑셀 파일 올리기
         new:
