rename address book to contact

--- a/config/locales/ko/ko.yml
+++ b/config/locales/ko/ko.yml
@@ -121,10 +121,10 @@ ko:
             bank_transfer: 이체 내역
             card_used_source: 카드 이용내역
             card_approved_source: 카드 승인내역
-            address_book: 주소록
-            address_book_email: 이메일
-            address_book_phone_number: 전화번호
-            address_book_address: 주소
+            contact: 주소록
+            contact_email: 이메일
+            contact_phone_number: 전화번호
+            contact_address: 주소
         attributes:
             attachment:
                 comments: 주석
@@ -341,19 +341,19 @@ ko:
                 canceled_at: 취소일자
                 status: 매입상태
                 will_be_paied_at: 결제예정일
-            address_book:
+            contact:
                 firstname: 성
                 lastname: 이름
                 company: 회사
                 department: 부서
                 position: 직위
-            address_book_email:
+            contact_email:
                 target: 대상
                 email: 이메일
-            address_book_phone_number:
+            contact_phone_number:
                 target: 대상
                 number: 전화번호
-            address_book_address:
+            contact_address:
                 target: 대상
                 country: 국가
                 province: 주
@@ -742,7 +742,7 @@ ko:
             link: 연차 사용하기
         edit:
             title: 연차 수정하기
-    address_books:
+    contacts:
         index:
             title: 주소록 리스트
             empty: 주소록이 없습니다
